Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@ The JVM version needed is Java 7 (you can get it <a href="http://java.com/downlo
 <li>Folders with foreign charaters (à, é, è, ë, ê, ù, ...) can't be read if the file is launched from the interface. You need to launch it from the terminal with the command <code>java -jar ./BookNaviger.jar</code>.</li>
 <li>The trackpad special mouvements (swipe, rotate, magnify) can't control the navigation anymore.
 Boths theses bugs are related to Java 7 for Mac OS X which no longer relies on Apple. Nothing i can do on my side. Wait and see...</li>
-</ul>
+</ul><h2>Download</h2>
+
+<p>You can get either the setup for your system - Windows / Linux / Mac OS X - <a href="http://code.google.com/p/booknaviger/downloads/list">here</a> (powered by <a href="http://www.ej-technologies.com/products/install4j/overview.html"><strong>install4j</strong></a>) or the <a href="https://github.com/Inervo/BookNaviger">source</a> from github</p>
       </section>
     </div>
 
