--- a/index.html
+++ b/index.html
@@ -1,36 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Booknaviger : A simple way to have a books library" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Booknaviger by Inervo</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Booknaviger</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">Booknaviger</h1>
+        <p class="header">A simple way to have a books library</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Inervo/BookNaviger">View on GitHub</a>
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/Inervo/BookNaviger/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/Inervo/BookNaviger/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/Inervo/BookNaviger">View On GitHub</a></li>
+        </ul>
 
-          <h1 id="project_title">Booknaviger</h1>
-          <h2 id="project_tagline">A simple way to have a books library</h2>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/Inervo">Inervo</a></p>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/Inervo/BookNaviger/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/Inervo/BookNaviger/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h1>Overview</h1>
 
 <h2>What is it ?</h2>
@@ -72,24 +71,17 @@ The JVM version needed is Java 7 (you can get it <a href="http://java.com/downlo
 <p>Some bugs still exists on Mac OS X :</p>
 
 <ul>
-<li>Folders with foreign charaters (à, é, è, ë, ê, ù, ...) can't be read if the file is launched from the interface. You need to launch it from the terminal with the command <code>java -jar ./BookNaviger.jar</code>.</li>
 <li>The trackpad special mouvements (swipe, rotate, magnify) can't control the navigation anymore.
-Boths theses bugs are related to Java 7 for Mac OS X which no longer relies on Apple. Nothing i can do on my side. Wait and see...</li>
+This bug is related to Java 7 for Mac OS X which no longer relies on Apple. Nothing i can do on my side. Wait and see...</li>
 </ul><h2>Download</h2>
 
-<p>You can get either the setup for your system - Windows / Linux / Mac OS X - <a href="http://code.google.com/p/booknaviger/downloads/list">here</a> (powered by <a href="http://www.ej-technologies.com/products/install4j/overview.html"><strong>install4j</strong></a>) or the <a href="https://github.com/Inervo/BookNaviger">source</a> from github</p>
+<p>You can get either the setup for your system - Windows / Linux / Mac OS X - <a href="http://code.google.com/p/booknaviger/downloads/list">here</a> (powered by <a href="http://www.ej-technologies.com/products/install4j/overview.html">install4j</a>) or the <a href="https://github.com/Inervo/BookNaviger">source</a> from github</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Booknaviger maintained by <a href="https://github.com/Inervo">Inervo</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-
-    
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
   </body>
 </html>
