--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <li>read theses books</li>
 </ul><h2>What does it look like</h2>
 
-<p>[SCREENSHOTS SOON]</p>
+<p><img src="https://raw.github.com/Inervo/BookNaviger/gh-pages/images/screenshot_1.5-1.png" alt="screenshot 1"><img src="https://raw.github.com/Inervo/BookNaviger/gh-pages/images/screenshot_1.5-2.png" alt="screenshot 2"><img src="https://raw.github.com/Inervo/BookNaviger/gh-pages/images/screenshot_1.5-3.png" alt="screenshot 3"><img src="https://raw.github.com/Inervo/BookNaviger/gh-pages/images/screenshot_1.5-4.png" alt="screenshot 4"><img src="https://raw.github.com/Inervo/BookNaviger/gh-pages/images/screenshot_1.5-5.png" alt="screenshot 5"></p>
 
 <h1>More info</h1>
 
