--- a/index.html
+++ b/index.html
@@ -41,7 +41,17 @@
 <li>read theses books</li>
 </ul><h2>What does it look like</h2>
 
-<p><img src="https://raw.github.com/Inervo/BookNaviger/gh-pages/images/screenshot_1.5-1.png" alt="screenshot 1"><img src="https://raw.github.com/Inervo/BookNaviger/gh-pages/images/screenshot_1.5-2.png" alt="screenshot 2"><img src="https://raw.github.com/Inervo/BookNaviger/gh-pages/images/screenshot_1.5-3.png" alt="screenshot 3"><img src="https://raw.github.com/Inervo/BookNaviger/gh-pages/images/screenshot_1.5-4.png" alt="screenshot 4"><img src="https://raw.github.com/Inervo/BookNaviger/gh-pages/images/screenshot_1.5-5.png" alt="screenshot 5"></p>
+<blockquote>
+<p>Main screen<br><img src="https://raw.github.com/Inervo/BookNaviger/gh-pages/images/screenshot_1.5-1.png" alt="screenshot 1"></p>
+
+<p>An album is selected and a preview is shown<br><img src="https://raw.github.com/Inervo/BookNaviger/gh-pages/images/screenshot_1.5-2.png" alt="screenshot 2"></p>
+
+<p>The reading screen. Single page. The picture is blurred intentionally<br><img src="https://raw.github.com/Inervo/BookNaviger/gh-pages/images/screenshot_1.5-3.png" alt="screenshot 3"></p>
+
+<p>Dual page mode. The picture is blurred intentionally<br><img src="https://raw.github.com/Inervo/BookNaviger/gh-pages/images/screenshot_1.5-4.png" alt="screenshot 4"></p>
+
+<p>Dual page mode with fit to screen option. The picture is blurred intentionally<br><img src="https://raw.github.com/Inervo/BookNaviger/gh-pages/images/screenshot_1.5-5.png" alt="screenshot 5"></p>
+</blockquote>
 
 <h1>More info</h1>
 
@@ -61,7 +71,16 @@
 </li>
 <li>Multi-profiles (one profile is one books' root folder)</li>
 <li>Generate a web page with the list of your books (either a simple list - just text - , or a detailed one with thumbnails of each album)</li>
-</ul><h2>Compatibility &amp; requirements</h2>
+</ul><h2>Languages</h2>
+
+<p>2 languages are created for now :</p>
+
+<ul>
+<li>English</li>
+<li>French</li>
+</ul><p>If you would like to contribute to create a new language, please <a href="https://github.com/Inervo/BookNaviger/issues/new">open an issue</a></p>
+
+<h2>Compatibility &amp; requirements</h2>
 
 <p><strong>Cross-Plateforms :</strong> BookNaviger is written in Java. It means it works (at least, it's supposed to work) everywhere that the Java Virtual Machine (JVM) is installed.
 The JVM version needed is Java 7 (you can get it <a href="http://java.com/download/index.jsp">here</a>).</p>
