Updated the index file

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
         <p class="header">A simple way to have a books library</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/Inervo/BookNaviger/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/Inervo/BookNaviger/tarball/master">Download TAR</a></li>
+          <li class="download"><a class="buttons" href="#downMenu">Download</a></li>
           <li><a class="buttons github" href="https://github.com/Inervo/BookNaviger">View On GitHub</a></li>
         </ul>
 
@@ -92,9 +91,9 @@ The JVM version needed is Java 7 (you can get it <a href="http://java.com/downlo
 <ul>
 <li>The trackpad special mouvements (swipe, rotate, magnify) can't control the navigation anymore.
 This bug is related to Java 7 for Mac OS X which no longer relies on Apple. Nothing i can do on my side. Wait and see...</li>
-</ul><h2>Download</h2>
+</ul><h2 id="downMenu">Download</h2>
 
-<p>You can get either the setup for your system - Windows / Linux / Mac OS X - <a href="http://code.google.com/p/booknaviger/downloads/list">here</a> (powered by <a href="http://www.ej-technologies.com/products/install4j/overview.html">install4j</a>) or the <a href="https://github.com/Inervo/BookNaviger">source</a> from github</p>
+<p>You can get either the setup for your system - Windows / Linux / Mac OS X - or just the compiled source <a href="http://code.google.com/p/booknaviger/downloads/list">here</a> (powered by <a href="http://www.ej-technologies.com/products/install4j/overview.html">install4j</a>) or the <a href="https://github.com/Inervo/BookNaviger">source</a> from github</p>
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
