--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ The JVM version needed is Java 7 (you can get it <a href="http://java.com/downlo
 This bug is related to Java 7 for Mac OS X which no longer relies on Apple. Nothing i can do on my side. Wait and see...</li>
 </ul><h2 id="downMenu">Download</h2>
 
-<p>You can get either the setup for your system - Windows / Linux / Mac OS X - or just the compiled source <a href="http://code.google.com/p/booknaviger/downloads/list">here</a> (powered by <a href="http://www.ej-technologies.com/products/install4j/overview.html">install4j</a>) or the <a href="https://github.com/Inervo/BookNaviger">source</a> from github<br>Prefer the featured downloads if you don't know what to choose.</p>
+<p>You can get either the setup for your system - Windows / Linux / Mac OS X - or just the compiled source <a href="http://code.google.com/p/booknaviger/downloads/list">here</a> (powered by <a href="http://www.ej-technologies.com/products/install4j/overview.html">install4j</a>) or the <a href="https://github.com/Inervo/BookNaviger">source</a> from github.<br>Prefer the featured downloads if you don't know what to choose.</p>
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
