--- a/index.html
+++ b/index.html
@@ -82,18 +82,16 @@
 <h2>Compatibility &amp; requirements</h2>
 
 <p><strong>Cross-Plateforms :</strong> BookNaviger is written in Java. It means it works (at least, it's supposed to work) everywhere that the Java Virtual Machine (JVM) is installed.
-The JVM version needed is Java 7 (you can get it <a href="http://java.com/download/index.jsp">here</a>).</p>
+The JVM version needed is Java 8 (you can get it <a href="http://www.oracle.com/technetwork/java/javase/downloads/jre8-downloads-2133155.html">here</a>).</p>
 
 <h3>Known bugs</h3>
 
-<p>Some bugs still exists on Mac OS X :</p>
+<p>Some bugs still exists. You can check the known ones on <a href="https://github.com/Inervo/BookNaviger/issues"></a>github issue</a>.</p>
+<p>If the bug doesn't exists, fill free to create one.</p>
 
-<ul>
-<li>The trackpad special mouvements (swipe, rotate, magnify) can't control the navigation anymore.
-This bug is related to Java 7 for Mac OS X which no longer relies on Apple. Nothing i can do on my side. Wait and see...</li>
-</ul><h2 id="downMenu">Download</h2>
+<h2 id="downMenu">Download</h2>
 
-<p>You can get either the setup for your system - Windows / Linux / Mac OS X - or just the compiled source <a href="http://code.google.com/p/booknaviger/downloads/list">here</a> (powered by <a href="http://www.ej-technologies.com/products/install4j/overview.html">install4j</a>) or the <a href="https://github.com/Inervo/BookNaviger">source</a> from github.<br>Prefer the featured downloads if you don't know what to choose.</p>
+<p>You can get either the setup for your system - Windows / Linux / Mac OS X - or just the compiled source <a href="https://github.com/Inervo/BookNaviger/releases/latest">here</a> (powered by <a href="http://www.ej-technologies.com/products/install4j/overview.html">install4j</a>).</p>
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
