--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ The JVM version needed is Java 8 (you can get it <a href="http://www.oracle.com/
 
 <h3>Known bugs</h3>
 
-<p>Some bugs still exists. You can check the known ones on <a href="https://github.com/Inervo/BookNaviger/issues"></a>github issue</a>.</p>
+<p>Some bugs still exists. You can check the known ones on <a href="https://github.com/Inervo/BookNaviger/issues">github issue</a>.</p>
 <p>If the bug doesn't exists, fill free to create one.</p>
 
 <h2 id="downMenu">Download</h2>
